# news-blog

./: .flake8  .gitignore  Dockerfile  README.md  RULES.md  docker-compose.yml  env.example  pyproject.toml
config/: settings.py  urls.py
news_blog/posts/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py  viewsets.py
news_blog/posts/migrations/: 0001_initial.py  0002_alter_post_options_comment.py  0003_category_alter_post_created_at_post_category.py  0004_post_likes.py  0005_alter_post_likes.py  0006_alter_category_name.py
news_blog/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  viewsets.py
news_blog/users/migrations/: 0001_initial.py
tests/: factories.py
tests/test_posts_app/: conftest.py  factories.py  test_comments.py  test_post.py  test_posts.py
tests/test_users/: conftest.py  factories.py  test_login.py  test_profile.py  test_registration.py
tests/test_users_app/: test_profile.py
